<resources>
    <string name="app_name">GalleryIos18</string>
    <string name="You_need_to_enable_permissions_to_use_this_feature">You need to enable permissions to use this feature</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="go_back">Go back</string>
    <string name="english">English</string>
    <string name="vn">Viet Nam</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="set_successfully">Set Successfully</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="apply_to_project">Apply to</string>
    <string name="exit_editing">Exit editing</string>
    <string name="ok">Ok</string>
    <string name="select_more_photos">Select more photos</string>
    <string name="change_settings">Change settings</string>
    <string name="rate_us">Rate us</string>
    <string name="text_content_rate">We’re grateful for your time on Lock Screen</string>
    <string name="text_question_rate">Are you satisfied with Lock Screen?</string>
    <string name="submit">Submit</string>
    <string name="not_now">Not now</string>
    <string name="please_rate_5_star">Please rate 5 star</string>
    <string name="link_share_market">Link share market</string>
    <string name="home">Home</string>
    <string name="languages">Language</string>
    <string name="this_file_is_corrupted_please_choose_another_file">This file is corrupted please choose another file</string>
    <string name="you_need_to_enable_permissions">You need to enable permissions</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="all_photos">All</string>
    <string name="adjust">Adjust</string>
    <string name="auto">AUTO</string>
    <string name="exposure">exposure</string>
    <string name="brilliance">brilliance</string>
    <string name="highlights">highlights</string>
    <string name="shadows">shadows</string>
    <string name="contrast">contrast</string>
    <string name="brightness">brightness</string>
    <string name="blackpoint">blackpoint</string>
    <string name="saturation">saturation</string>
    <string name="vibrance">vibrance</string>
    <string name="warmth">warmth</string>
    <string name="tint">tint</string>
    <string name="sharpness">sharpness</string>
    <string name="definition">definition</string>
    <string name="noise_reduction">noise reduction</string>
    <string name="vignette">vignette</string>
    <string name="customize_reorder"><![CDATA[Customize & Reorder]]></string>
    <string name="action">Action</string>
    <string name="error">Error</string>
    <string name="photo_zoom">Photo Zoom</string>
    <string name="reset">Reset</string>
    <string name="reorder_or_hide_collections_to_personalize_your_view">Reorder or hide collections to personalize your view</string>
    <string name="videos">Videos</string>
    <string name="selfies">Selfies</string>
    <string name="screenShots">Screenshots</string>
    <string name="screen_recordings">Screen Recordings</string>
    <string name="live_photos">Live Photos</string>
    <string name="favorites">Favorites</string>
    <string name="hidden">Hidden</string>
    <string name="recently_deleted">Recently Deleted</string>

</resources>