<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_select_more_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@color/white"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/_17sdp"
            android:text="@string/select_more_photos"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@+id/view_line" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_change_settings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_change_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@color/white"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/_17sdp"
            android:text="@string/change_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@+id/tv_cancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/white"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/_17sdp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>