<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cslContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_28sdp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/apply_to_project"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <View
                android:id="@+id/view_line2"
                android:layout_width="0.8dp"
                android:layout_height="0dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_11sdp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toStartOf="@+id/view_line2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_11sdp"
                android:text="@string/apply"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_line2"
                app:layout_constraintTop_toBottomOf="@id/view_line" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>